<resources>
    <string name="app_name">ProyectoSegundoParcial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_editar">Editar</string>
    <string name="infoPaciente">Informacion del Paciente\n</string>
    <string name="id">Id</string>
    <string name="buscar">Buscar\n</string>
    <string name="area">Area</string>
    <string name="doctor">Doctor</string>
    <string name="nombre">Nombre</string>
    <string name="genero">Genero</string>
    <string name="fechaIngreso">Fecha de Ingreso\n</string>
    <string name="edad">Edad</string>
    <string name="estatura">Estatura</string>
    <string name="peso">Peso</string>
    <string name="limpiar">Limpia\n</string>
    <string name="menu_crear">Crear\n</string>
    <string name="menu_listarvigentes">Listar Activos\n</string>
    <string name="menu_listarnovigentes">Listar No Activos\n</string>
    <string name="menu_acerca">Acerca de</string>
    <string name="hombre">Hombre\n</string>
    <string name="mujer">Mujer</string>
    <string name="email">Email</string>
    <string name="vigente">Vigente</string>
    <string name="eliminarvigencia">Baja</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_buscar">Buscar</string>
    <string name="fechaInicio">Fecha de inicio\n</string>
    <string name="nombreLibro">Nombre del Libro</string>
    <string name="paginas">Paginas</string>
    <string name="leido">Leido</string>
    <string name="infoLibro">Informacion de libro\n</string>
    <string name="noleido">No leido</string>
    <string name="formulario">Formulario</string>
    <string name="fechanacimiento">Fecha de Nacimiento</string>
    <string name="telefono">Telefono</string>
    <string name="colorpreferido">Color Preferido</string>
    <string name="rojo">Rojo</string>
    <string name="verde">Verde</string>
    <string name="amarillo">Amarillo</string>
    <string name="azul">Azul</string>
    <string name="morado">Morado</string>
    <string name="accesar">Accesar</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="iraformulario">Ir a formulario</string>
    <string name="irafotografia">Ir a fotografia</string>
    <string name="description">Descripcion</string>
    <string name="irinicio">Ir inicio</string>
    <string name="camara">Camara</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="iradatos">Ir a Datos</string>
    <string name="salir">Salir</string>
    <string name="video">Video que deseas ver</string>
    <string name="video1">Video 1</string>
    <string name="video2">Video 2</string>
    <string name="video3">Video 3</string>
    <string name="videoc">Video</string>
    <string name="creditos">Creditos</string>
    <string name="tomarfoto">Tomar Foto</string>
    <string name="encender_apagar">Encender/Apagar</string>
    <string name="maselementos">Mas Elementos</string>
    <string name="activos">Activos</string>
    <string name="noactivos">No activos\n</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="costo">Costo</string>
    <string name="imagen">Imagen</string>
    <string name="registrar">Registrar</string>
    <string name="logo">Logo</string>
    <string name="tipousuario">Tipo de usuario\n</string>
</resources>