<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="gimnasio.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_crear"
        android:name="gimnasio.ui.crear.CrearFragment"
        android:label="@string/menu_crear"
        tools:layout="@layout/fragment_crear" />
    <fragment
        android:id="@+id/nav_editar"
        android:name="gimnasio.ui.editar.EditarFragment"
        android:label="@string/menu_editar"
        tools:layout="@layout/fragment_editar" />
    <fragment
        android:id="@+id/nav_eliminar"
        android:name="gimnasio.ui.eliminar.EliminarFragment"
        android:label="@string/menu_eliminar"
        tools:layout="@layout/fragment_eliminar" />
    <fragment
        android:id="@+id/nav_listarV"
        android:name="gimnasio.ui.listaractivos.ListarActivosFragment"
        android:label="@string/menu_listarvigentes"
        tools:layout="@layout/fragment_listar_activos" />
    <fragment
        android:id="@+id/nav_buscar"
        android:name="gimnasio.ui.buscar.BuscarFragment"
        android:label="@string/menu_buscar"
        tools:layout="@layout/fragment_buscar" />


</navigation>